improve html template

--- a/dem/utils/viewer.html
+++ b/dem/utils/viewer.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Results</title>
+    <style>
+        body{
+            margin: 30px auto;
+            max-width: 900px;
+            line-height: 1.2;
+            font-size:14px;
+            color:#444;
+            padding: 10px;
+            font-family: Helvetica;
+            font-color: #383838;
+        }
+    </style>
 </head>
-<body style="font-family: Helvetica">
 
+<body>
+
+<h1>Model description</h1>
+__STRING_TO_REPLACE__
+
+<h1>Training results</h1>
 <h2> Model </h2>
 
 <img src="model.gif" alt="model animation" width="640">
