--- a/dem/utils/viewer.html
+++ b/dem/utils/viewer.html
@@ -19,7 +19,7 @@
           background-color: #eee;
           border: 1px solid #999;
           display: block;
-          padding: 2px;
+          padding: 8px;
           font-family: Courier
         }
 
@@ -33,8 +33,8 @@
 
 <body>
 
+<h1>Setup</h1>
 <hr>
-<h1>Model and setup</h1>
 
 <pre>
   <code>__MODEL_DESCRIPTION__</code>
@@ -44,10 +44,10 @@
   <code>__PKG_INFO__</code>
 </pre>
 
-<hr>
 <h1>Training results</h1>
+<hr>
 
-<h2> Model </h2>
+<h2> Generative model </h2>
 
 <div class="center">
 <img src="model.gif" alt="model animation" width="640">
